# app/Http/Controllers/ProductController.php
@@ -10,20 +10,7 @@ use Illuminate\Support\Facades\Auth;
 class ProductController extends Controller
 {
    /* public function __construct()
-    {
-        // Ограничиваем доступ для байеров
-      //  $this->middleware('role:buyer');
-    }
 
-    // Получение продуктов текущего байера
-
-    /**
-     * @OA\Get(
-     *     path="/api/products",
-     *     summary="Получить список продуктов",
-     *     tags={"Product"},
-     *     @OA\Response(response=200, description="Список продуктов")
-     * )
      */
 
     public function index()
@@ -35,19 +22,7 @@ class ProductController extends Controller
     // Создание продукта для текущего байера
 
     /**
-     * @OA\Post(
-     *     path="/api/products",
-     *     summary="Создать продукт",
-     *     tags={"Product"},
-     *     @OA\RequestBody(
-     *         required=true,
-     *         @OA\JsonContent(
-     *             @OA\Property(property="name", type="string", example="Продукт 1"),
-     *             @OA\Property(property="price", type="number", example=100.50)
-     *         )
-     *     ),
-     *     @OA\Response(response=201, description="Продукт успешно создан")
-     * )
+
      */
 
     public function create(Request $request)
