# app/Http/Controllers/TeamLeadController.php
@@ -16,19 +16,7 @@ class TeamLeadController extends Controller
     }
 
     /**
-     * @OA\Post(
-     *     path="/api/users/{userId}/assign-buyer",
-     *     summary="Назначить баера",
-     *     tags={"TeamLead"},
-     *     @OA\Parameter(
-     *         name="userId",
-     *         in="path",
-     *         required=true,
-     *         description="ID пользователя",
-     *         @OA\Schema(type="integer", example=2)
-     *     ),
-     *     @OA\Response(response=200, description="Баер успешно назначен"),
-     *     @OA\Response(response=404, description="Пользователь не найден")
+
      * )
      */
     public function assignBuyerRole($userId)
@@ -40,20 +28,7 @@ class TeamLeadController extends Controller
     }
 
     /**
-     * @OA\Post(
-     *     path="/api/users/{userId}/remove-buyer",
-     *     summary="Удалить роль баера",
-     *     tags={"TeamLead"},
-     *     @OA\Parameter(
-     *         name="userId",
-     *         in="path",
-     *         required=true,
-     *         description="ID пользователя",
-     *         @OA\Schema(type="integer", example=2)
-     *     ),
-     *     @OA\Response(response=200, description="Роль баера успешно удалена"),
-     *     @OA\Response(response=404, description="Пользователь не найден")
-     * )
+
      */
     public function removeBuyerRole($userId)
     {
